# ktv-extractor

./: .gitignore  README.md  pyproject.toml
src/: batch_remove_video.py  fetch_lyrics.py  index.py  single.py
src/asyncmkv/: MKVFile.py  MKVTrack.py  TypeTrack.py  Verifications.py  subprocess.py
src/ktv_extractor/: __init__.py  lyrics.py  model.py  process.py
src/ktv_extractor/lyrics/: __init__.py  enum.py  lyrics.py  match.py
src/ktv_extractor/lyrics/provider/: __init__.py  kg.py  ne.py  qm.py
src/ktv_extractor/utils/: time.py
