[project]
name = "ktv-extractor"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jasper.Z", email = "jasper.zsh@hotmail.com" }
]
dependencies = [
    "pymkv2>=2.0.8",
    "setuptools>=75.5.0",
    "sqlalchemy>=2.0.36",
    "pypinyin>=0.53.0",
    "aiohttp>=3.11.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ktv_extractor"]
